tranfsering during AIH to Rutger

--- a/Master.html
+++ b/Master.html
@@ -25,39 +25,39 @@
 		</div>
 	</div>
 	<div class="controller">
-		<div id="translations" class="container multiple" style="flex: 1;">
+		<div id="translations" class="container multiple" style="width: 512px; flex: 1;">
 			<div id="Frans" class="multiple-elem lower single">
-				<h1 id="HeaderFrans" class="subtitle current">
+				<h1 id="HeaderFrans" class="subtitleLED current">
 					Français
 				</h1>
 			</div>
 			<hr id="separator" class="multiple-mini-element symbol"/>
 			<div id="Nederlands" class="multiple-elem upper single">
-				<h1 id="HeaderNederlands" class="subtitle current">
+				<h1 id="HeaderNederlands" class="subtitleLED current">
 					Nederlands
 				</h1>
 			</div>
 		</div>
 		<div id="original" class="container multiple" style="flex: 1;">
-			<h2 class="multiple-elem upper subtitle previous">
+			<h2 class="multiple-elem upper subtitleLED previous">
 				preview
 			</h2>
-			<h2 class="multiple-elem upper subtitle previous">
+			<h2 class="multiple-elem upper subtitleLED previous">
 				preview
 			</h2>
-			<h2 class="multiple-elem upper subtitle previous">
+			<h2 class="multiple-elem upper subtitleLED previous">
 				preview
 			</h2>
-			<h2 class="multiple-elem current subtitle current">
+			<h2 class="multiple-elem current subtitleLED current">
 				current
 			</h2>
-			<h2 class="multiple-elem lower subtitle next">
+			<h2 class="multiple-elem lower subtitleLED next">
 				next
 			</h2>
-			<h2 class="multiple-elem lower subtitle next">
+			<h2 class="multiple-elem lower subtitleLED next">
 				next
 			</h2>
-			<h2 class="multiple-elem lower subtitle next">
+			<h2 class="multiple-elem lower subtitleLED next">
 				next
 			</h2>
 		</div>
