--- a/SlaveFixed.html
+++ b/SlaveFixed.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Caption (Slave)</title>
+<title>Subtitle LED display</title>
 <link rel="stylesheet" type="text/css" href="css/Boventiteling.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <body>
