--- a/BannerFollowUs.html
+++ b/BannerFollowUs.html
@@ -6,7 +6,7 @@
 <body>
 	<script src="js/d3.js"></script>
 
-	<div id="fixedbar" class="banner container multiple" onclick="testAnimation(this);">
+	<div id="fixedbar" class="bannerfollowus container multiple" onclick="testAnimation(this);">
 	    <div id="Frans" class="multiple-elem lower single">
 	            
 	    </div>
