--- a/BannerPhone.html
+++ b/BannerPhone.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Banner Trivial Muffins</title>
+<title>Silence please</title>
 <link rel="stylesheet" type="text/css" href="css/Boventiteling.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <body>
 	<script src="js/d3.js"></script>
 
-	<div id="fixedbar" class="banner container multiple" onclick="testAnimation(this);">
+	<div id="fixedbar" class="bannerNoPhone container multiple" onclick="testAnimation(this);">
 	    <div id="Frans" class="multiple-elem lower single">
 	            
 	    </div>
